apps/manifests/influxdb/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb-ingress
  namespace: influxdb
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`influxdb.lan`)
      kind: Rule
      services:
        - name: influxdb
          port: 8086
